images/first pop up

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body style="text-align: center;">
     <div>
-        <h1>Name of Application</h1>
+        <h1>Pics-a-Goal</h1>
     </div>
 
     <div>
