--- a/html/first.html
+++ b/html/first.html
@@ -19,23 +19,23 @@
 	</div>
 
 	<div>
-		<button onclick="window.location.href = '../html/second.html';" type="button" id="button" class="button1 text">
-			<p>extremely large word1</p>
+		<button onclick="myFunction3()" type="button" id="button" class="button3 text popup3">
+			<p>Sun Energy</p>
+			<span class="popuptext3" id="myPopup3">Sorry, try again!</span>
 		</button>
 
 		<button onclick="myFunction2()" type="button" id="button" class="button2 text popup2">
-			<p>extremely large word2</p>
-			<span class="popuptext2" id="myPopup2">A Simple Popup!</span>
+			<p>Sun Panels</p>
+			<span class="popuptext2" id="myPopup2">Sorry, try again!</span>
 		</button>
 
-		<button onclick="myFunction3()" type="button" id="button" class="button3 text popup3">
-			<p>extremely large word3</p>
-			<span class="popuptext3" id="myPopup3">A Simple Popup!</span>
+		<button onclick="window.location.href = '../html/second.html';" type="button" id="button" class="button1 text">
+			<p>Solar Panels</p>
 		</button>
 
 		<button onclick="myFunction4()" type="button" id="button" class="button4 text popup4">
-			<p>extremely large word4</p>
-			<span class="popuptext4" id="myPopup4">A Simple Popup!</span>
+			<p>Solar Energy</p>
+			<span class="popuptext4" id="myPopup4">Sorry, try again!</span>
 		</button>
 	</div>
 </body>
