--- a/html/first.html
+++ b/html/first.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/first.css">
 	<script type="text/javascript" src="../js/first.js"></script>
 	<meta charset="UTF-8" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 	<title>First</title>
 </head>
 
@@ -21,12 +22,12 @@
 	<div>
 		<button onclick="myFunction3()" type="button" id="button" class="button3 text popup3">
 			<p>Sun Energy</p>
-			<span class="popuptext3" id="myPopup3">Sorry, try again!</span>
+			<span class="popuptext3" id="myPopup3">X</span>
 		</button>
 
 		<button onclick="myFunction2()" type="button" id="button" class="button2 text popup2">
 			<p>Sun Panels</p>
-			<span class="popuptext2" id="myPopup2">Sorry, try again!</span>
+			<span class="popuptext2" id="myPopup2">X</span>
 		</button>
 
 		<button onclick="window.location.href = '../html/second.html';" type="button" id="button" class="button1 text">
@@ -35,7 +36,12 @@
 
 		<button onclick="myFunction4()" type="button" id="button" class="button4 text popup4">
 			<p>Solar Energy</p>
-			<span class="popuptext4" id="myPopup4">Sorry, try again!</span>
+			<span class="popuptext4" id="myPopup4">X</span>
 		</button>
 	</div>
+
+<!-- 	<div>
+		<p class="question">Hint</p>
+		<p class="hint">It is a common method of renewable energy, especially in Hawaii. Implementing this can help our state reach our goal of 100% renewable energy by 2045.</p>
+	</div> -->
 </body>
