--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="index.js"></script>
 	<meta charset="UTF-8" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Roboto&display=swap" rel="stylesheet">
 	<title>Opening</title>
 </head>
 
 <body style="text-align: center;">
     <div>
         <h1>Pics-a-Goal</h1>
+        <img class="logo" src="pictures/goals.png">
     </div>
 
     <div>
