--- a/html/second.html
+++ b/html/second.html
@@ -21,21 +21,21 @@
 
 	<div>
 		<button onclick="myFunction2()" type="button" id="button" class="button2 text popup2">
-			<p>Farmer's Store</p>
+			<p>Farmer's <br> Store</p>
 			<span class="popuptext2" id="myPopup2">X</span>
 		</button>
 
 		<button onclick="window.location.href = '../html/third.html';" type="button" id="button" class="button1 text">
-			<p>Farmer's Market</p>
+			<p>Farmer's <br> Market</p>
 		</button>
 
 		<button onclick="myFunction3()" type="button" id="button" class="button3 text popup3">
-			<p>Sustainable Store</p>
+			<p>Sustainable <br> Store</p>
 			<span class="popuptext3" id="myPopup3">X</span>
 		</button>
 
 		<button onclick="myFunction4()" type="button" id="button" class="button4 text popup4">
-			<p>Local Products</p>
+			<p>Local <br> Products</p>
 			<span class="popuptext4" id="myPopup4">X</span>
 		</button>
 	</div>
