--- a/html/fourth.html
+++ b/html/fourth.html
@@ -30,7 +30,7 @@
 		</button>
 
 		<button onclick="myFunction3()" type="button" id="button" class="button3 text popup3">
-			<p>Fossil Charging</p>
+			<p>Bone Charging</p>
 			<span class="popuptext3" id="myPopup3">X</span>
 		</button>
 
