--- a/html/sixth.html
+++ b/html/sixth.html
@@ -35,7 +35,7 @@
 			<span class="popuptext4" id="myPopup4">X</span>
 		</button>
 
-		<button onclick="window.location.href = '../html/sixth.html';" type="button" id="button" class="button1 text">
+		<button onclick="window.location.href = '../html/information.html';" type="button" id="button" class="button1 text">
 			<p>Geothermal</p>
 		</button>
 	</div>
